--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Barber Black Sheep Website</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+    <title>Barber Black Sheep</title>
+	<meta name="barber black sheep, black sheep, blacksheep, barber, barbers, limerick, thomondgate, mens hairdresser, mens hairdressing, gents hairdressing, gents hairdresser, haircut, haircutting, shave, shaves, hot towel shave, turkish shave, best barber, no1 barber, top barber, " content="barber black sheep, barber, shaves, styles, first cut, loyalty club, customer service" />
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="barberblacksheep, barber blacksheep, barber black sheep, barber, gents hairdressing, gents haircutting, gents hair cuts, limerick, thomondgate, watch house cross, watchhouse cross, moyross," content="Mens Barbering">
     
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,8 +33,8 @@
 	<div id="main-sidebar" class="hidden-xs hidden-sm">
 		<div class="logo">
 			<a href="#"><h1>Barber Black Sheep</h1></a>
-			<span><h3>Welcome to Barber Black Sheep<br>
-			The Best in Limerick Barbering.</h3></span>
+			<span><h3>Welcome to <br>Barber Black Sheep<br>
+			The Best in <br>Limerick Barbering.</h3></span>
 		</div> <!-- /.logo -->
 
 		<div class="navigation">
