--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	<div id="main-sidebar" class="hidden-xs hidden-sm">
 		<div class="logo">
 			<a href="#"><h1>Barber Black Sheep</h1></a>
-			<span><h3>Welcome to <br>Barber Black Sheep<br>
-			The Best in <br>Limerick Barbering.</h3></span>
+			<span><h3>Welcome to <br><strong>Barber Black Sheep</strong><br>
+			The <strong>Best<strong> in <br>Limerick Barbering.</h3></span>
 		</div> <!-- /.logo -->
 
 		<div class="navigation">
