--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="logo">
 			<a href="#"><h1>Barber Black Sheep</h1></a>
 			<span><h3>Welcome to <br><strong>Barber Black Sheep</strong><br>
-			The <strong>Best<strong> in <br>Limerick Barbering.</h3></span>
+			The <strong>Best</strong> in <br>Limerick Barbering.</h3></span>
 		</div> <!-- /.logo -->
 
 		<div class="navigation">
