--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<li>
 							<div class="slider-caption">
 								<h2>Testimonials</h2>
-								<p>Want to see what reviews are customers are giving us, feel free to look and click the button below</p>
+								<p><strong>Want to see what reviews are customers are giving us, feel free to look and click the button below</strong></p>
 								<a href="https://www.facebook.com/barberblacksheeplimerick/reviews" class="largeButton homeBgColor" target="_blank">Customer <br> Reviews</a>
 							</div>
 							<img src="images/Shaving.jpg" alt="Slide 2">
@@ -130,7 +130,7 @@
 									<ul class="social-member">
 										<li><a href="https://www.linkedin.com/in/david-gillespie-39474583?authType=NAME_SEARCH&authToken=e54B&locale=en_US&srchid=1008668541474986297926&srchindex=12&srchtotal=482&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A1008668541474986297926%2CVSRPtargetId%3A297446368%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" class="fa fa-linkedin"></a></li>
 									</ul>
-										<li><a href="https://www.facebook.com/barberblacksheeplimerick/?fref=ts" class="fa fa-facebook" target="_blank"></a></li>
+										<li><a href="https://www.facebook.com/barberblacksheeplimerick/?fref=ts" class="fa fa-facebook"></a></li>
 										</ul>
 								</div>
 							</div>
