ADDING MESSAGE TO WEB FORM
AS WE HAVEN'T DONE STREAM 3 YET CANNOT USE WEB MAIL

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 									<ul class="social-member">
 										<li><a href="https://www.linkedin.com/in/david-gillespie-39474583?authType=NAME_SEARCH&authToken=e54B&locale=en_US&srchid=1008668541474986297926&srchindex=12&srchtotal=482&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A1008668541474986297926%2CVSRPtargetId%3A297446368%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" class="fa fa-linkedin"></a></li>
 									</ul>
+										<ul class="social-member">
 										<li><a href="https://www.facebook.com/barberblacksheeplimerick/?fref=ts" class="fa fa-facebook"></a></li>
 										</ul>
 								</div>
@@ -403,12 +404,12 @@
 						<input name="subject-id" type="text" id="subject-id" maxlength="60">
 					</div> 
 					<div class="col-md-12">
-						<label for="message-id" class="required">Message:</label>
+						<label for="message-id" class="required">Message: <strong> CURRENTLY UNDER DEVELOPMENT.. DO NOT USE</strong></label>
 						<textarea name="message-id" id="message-id" rows="6"></textarea>
 					</div> 
 					<div class="col-md-12">
 						<div class="submit-btn">
-							<a href="barberblacksheeplimerick@gmail.com" class="largeButton contactBgColor">Send Message</a>
+							<a href="barberblacksheeplimerick@gmail.com" class="largeButton contactBgColor">Send appointment request</a>
 						</div> <!-- /.submit-btn -->
 					</div> 
 				</div>
@@ -435,7 +436,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="copyright">Copyright © Seamus Gillespie 2015 Barber Black Sheep</a>
+							<p class="copyright">Copyright © Seamus Gillespie, 2016, Barber Black Sheep</a>
                             </p>
 						</div>
 						<div class="col-md-6 credits">
