--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Barber Black Sheep Website</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+    <title>Barber Black Sheep</title>
+	<meta name="barber black sheep, black sheep, blacksheep, barber, barbers, limerick, thomondgate, mens hairdresser, mens hairdressing, gents hairdressing, gents hairdresser, haircut, haircutting, shave, shaves, hot towel shave, turkish shave, best barber, no1 barber, top barber, " content="barber black sheep, barber, shaves, styles, first cut, loyalty club, customer service" />
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="barberblacksheep, barber blacksheep, barber black sheep, barber, gents hairdressing, gents haircutting, gents hair cuts, limerick, thomondgate, watch house cross, watchhouse cross, moyross," content="Mens Barbering">
     
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,8 +33,8 @@
 	<div id="main-sidebar" class="hidden-xs hidden-sm">
 		<div class="logo">
 			<a href="#"><h1>Barber Black Sheep</h1></a>
-			<span><h3>Welcome to Barber Black Sheep<br>
-			The Best in Limerick Barbering.</h3></span>
+			<span><h3>Welcome to <br><strong>Barber Black Sheep</strong><br>
+			The <strong>Best</strong> in <br>Limerick Barbering.</h3></span>
 		</div> <!-- /.logo -->
 
 		<div class="navigation">
@@ -69,7 +68,7 @@
 						<li>
 							<div class="slider-caption">
 								<h2>Testimonials</h2>
-								<p>Want to see what reviews are customers are giving us, feel free to look and click the button below</p>
+								<p><strong>Want to see what reviews are customers are giving us, feel free to look and click the button below</strong></p>
 								<a href="https://www.facebook.com/barberblacksheeplimerick/reviews" class="largeButton homeBgColor" target="_blank">Customer <br> Reviews</a>
 							</div>
 							<img src="images/Shaving.jpg" alt="Slide 2">
@@ -131,7 +130,8 @@
 									<ul class="social-member">
 										<li><a href="https://www.linkedin.com/in/david-gillespie-39474583?authType=NAME_SEARCH&authToken=e54B&locale=en_US&srchid=1008668541474986297926&srchindex=12&srchtotal=482&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A1008668541474986297926%2CVSRPtargetId%3A297446368%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" class="fa fa-linkedin"></a></li>
 									</ul>
-										<li><a href="https://www.facebook.com/barberblacksheeplimerick/?fref=ts" class="fa fa-facebook" target="_blank"></a></li>
+										<ul class="social-member">
+										<li><a href="https://www.facebook.com/barberblacksheeplimerick/?fref=ts" class="fa fa-facebook"></a></li>
 										</ul>
 								</div>
 							</div>
@@ -387,7 +387,7 @@
 				<p><strong> Barber Black Sheep,<br>
 				Watchouse Cross, <br>
 				Limerick <br>
-				083 4450114<br>
+				<h2 >Call Us Now: <a href="tel:+353 83 4450114">00353 83 4450114 </a></h2><br>
 				barberblacksheep@gmail.com</strong></p>
 
 				<div class="row contact-form">
@@ -404,12 +404,12 @@
 						<input name="subject-id" type="text" id="subject-id" maxlength="60">
 					</div> 
 					<div class="col-md-12">
-						<label for="message-id" class="required">Message:</label>
+						<label for="message-id" class="required">Message: <strong> CURRENTLY UNDER DEVELOPMENT.. DO NOT USE</strong></label>
 						<textarea name="message-id" id="message-id" rows="6"></textarea>
 					</div> 
 					<div class="col-md-12">
 						<div class="submit-btn">
-							<a href="barberblacksheeplimerick@gmail.com" class="largeButton contactBgColor">Send Message</a>
+							<a href="barberblacksheeplimerick@gmail.com" class="largeButton contactBgColor">Send appointment request</a>
 						</div> <!-- /.submit-btn -->
 					</div> 
 				</div>
@@ -436,7 +436,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="copyright">Copyright © Seamus Gillespie 2015 Barber Black Sheep</a>
+							<p class="copyright">Copyright © Seamus Gillespie, 2016, Barber Black Sheep</a>
                             </p>
 						</div>
 						<div class="col-md-6 credits">
