making Phone number reactive

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 				<p><strong> Barber Black Sheep,<br>
 				Watchouse Cross, <br>
 				Limerick <br>
-				083 4450114<br>
+				<h4>Call Us Now: <a href="tel:+353 83 4450114">00353 83 4450114 </a></h4><br>
 				barberblacksheep@gmail.com</strong></p>
 
 				<div class="row contact-form">
